# robotoc

./: .gitignore  README.md  index.html  video.html
descriptions/Olympus/: olympus.sdf  olympus.urdf
examples/anymal/: CMakeLists.txt  jump_sto.cpp  test_pc.cpp
examples/olympus/: CMakeLists.txt  jump_sto.cpp  jump_sto_open_chain.cpp  jump_sto_towr.cpp  load_olympus.cpp  refrence_tracking.cpp  stand.cpp  test_derivatives.cpp
examples/olympus/CKC/: CMakeLists.txt  derivatives.cpp  dq_issue.cpp  test.cpp  test_rna_derivatives.cpp
examples/olympus/python/: calculate_joint_states.py  display_anymal.py  display_olympus.py  generate_feasble_trajectory.py  high_jump_sto.py  hyper_param_search.py  jump_2.5m.json  jump_ckc_towr.py  jump_sto.py  jump_sto_ckc.py  jump_sto_olympmal.py  jump_sto_towr.py  land.py  squat_ckc.py  stand.py  stand_ckc.py  submodel.py  takeoff.py  test_init.py  trajectory_ref.py
examples/olympus/python/initialization/: __init__.py  calculate_joint_states.py  generate_feasble_trajectory.py
examples/olympus/python/logger/: __init__.py  blender.py
examples/olympus/python/testing/: bench_marks.py  jump_test.py
examples/olympus/python/tojr/: __init__.py  optjump.py
src/constraints/: contact_wrench_cone.cpp  friction_cone.cpp  impact_friction_cone.cpp  impact_wrench_cone.cpp
src/core/: split_direction.cpp  split_kkt_matrix.cpp  split_kkt_residual.cpp  split_solution.cpp
src/cost/: configuration_space_cost.cpp  cost_function.cpp  local_contact_force_cost.cpp  trajectory_ref.cpp
src/dynamics/: contact_dynamics.cpp  contact_dynamics_data.cpp  impact_dynamics.cpp  impact_state_equation.cpp  state_equation.cpp  switching_constraint_data.cpp  terminal_state_equation.cpp
src/ocp/: direct_multiple_shooting.cpp  impact_stage.cpp  intermediate_stage.cpp  terminal_stage.cpp
src/riccati/: riccati_factorizer.cpp
(+94 files in other folders)
